--- a/staticFiles/page.css
+++ b/staticFiles/page.css
@@ -1,17 +1,45 @@
-  /* Custom CSS file */
+/* Custom CSS file */
 
 
-  /* Define a new larger Button */
-  .btn-extra_large{
-    height:80px;
-    line-height:normal;
-    font-size:2.5vw;
-    padding:20 20px;
-    width: 100%;
+/* Define a new larger Button */
+.btn-extra_large{
+  height:75px;
+  line-height:normal;
+  font-size:150%;
+  padding:20 20px;
+  width: 85%;
+  border-radius: 25px;
+  vertical-align: middle;
+  text-align: left;
+
+  margin-bottom: 15px;
+  margin-left: 40px;
+  margin-right: 20px;
+  margin-top: 30px;
+
+  background-color:#0666f4e0;   
+}  
+
+/* Define Modal Button */
+.btn-modal{
+  height:60px;
+  line-height:normal;
+  font-size:120%;
+  padding:20 20px;
+  width: 100%;
+  border-radius: 10px;
+  vertical-align: middle;
+  text-align: center;
+
+  background-color:#0666f4e0;   
+}  
+
+
+/* Class for background image */
+.backgroundImage {
+    background-image: url("/staticFiles/background.jpg");
+    background-repeat: no-repeat;
+    height: 100%;
+    background-size: 100%;
     border-radius: 25px;
-    vertical-align: middle;
-    text-align: left;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    background-color:#0666f4e0;
-  }  
+}
