--- a/templates/bottle_empty.html
+++ b/templates/bottle_empty.html
@@ -23,41 +23,28 @@
                 <div class="row">
                     <div class="col s7">
                         <div class="title-text">
-                            <h5>DynaArm is preparing a delicious coctail for you, please wait...</h5>
+                            <h5>Bottle is empttyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</h5>
                         </div>
-                        <div style="margin-top:20; margin-bottom:20; padding:20 20 20 20px;"></div>
                         <form action="/" method="post" role="form">
                             <div class="row" style="margin-bottom: 0px;">
                                 <div class="col s3">
-                                    <button id="update_button" class="waves-effect waves-light btn-large btn-modal" name="rstatus_check">Return</button>
+                                    <button id="return_button" class="waves-effect waves-light btn-large btn-modal" name="return_main">Return</button>
                                 </div>
                             </div>                                                                     
                         </form>
-                    </div>                    
-                    <div class="col s5">
-                        <img class="responsive-img" style="margin-top: 30px; border-radius: 25px" src="/staticFiles/coctail.jpg">
+                        <div style="margin-top:20; margin-bottom:20; padding:20 20 20 20px;"></div>
                     </div>
-                </div>
-                <div class="progress">
-                   <div class="indeterminate"></div>
+                    <div class="col s5">
+                         <!-- <img class="responsive-img" style="margin-top: 30px; border-radius: 25px" src="/staticFiles/coctail.jpg"> -->
+                    </div>
                 </div>
             </div>  
         </div>
 
-        <script>
-            // Function to click the button
-            function clickButton() {
-                document.getElementById('update_button').click();
-            }
-    
-            // Set an interval to call the clickButton function every 2000 milliseconds (2 seconds)
-            setInterval(clickButton, 500);
-        </script>
-    
-        <!-- Compiled and minified Materialize-CSS JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <!-- Linking local JavaScript file -->
-        <script src="{{url_for('static', filename='home.js')}}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
+    <!-- Compiled and minified Materialize-CSS JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Linking local JavaScript file -->
+    <script src="{{url_for('static', filename='home.js')}}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
     </body>
 </html>
