--- a/templates/no_glass_available.html
+++ b/templates/no_glass_available.html
@@ -45,5 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Linking local JavaScript file -->
     <script src="{{url_for('static', filename='home.js')}}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
     </body>
 </html>
